<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fb_icon">fb_icon</string>
    <string name="choose_subsection">Выберите подраздел:</string>
    <string name="social_media_settings">Настройка социальных сетей</string>
    <string name="about_app">О приложении</string>
    <string name="about_big_text">Posting - приложение для автоматизации процесса постинга в различных социальных сетях. Здесь вы сможете в пару простых кликов связать ваши учетные записи на разных медиа-площадках. После этого вам будет досутпен функционал постинга.</string>
    <string name="choose_group">Выберите группу</string>
    <string name="tg_username">\@%1s</string>
    <string name="text_was_succesfully_copied">Текст успешно скопирован в буфер обмена!</string>
    <string name="posting_app_code">Posting app код</string>
    <string name="posting_bot">Posting Bot</string>
    <string name="are_you_sure_question">Вы уверены?</string>
    <string name="are_you_sure_what_you_want_unlink_account">Вы действительно уверены, что хотите отвязать свою учетную запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="linked_groups">Связанные группы:</string>
    <string name="you_havent_select_any_group_yet">Вы пока не выбрали ни одну группу.</string>
    <string name="vkontakte">Вконтакте</string>
    <string name="hm_seems_like_you_havent_link_account">Хм… Похоже вы еще не привязали свою учетную запись.</string>
    <string name="unlink">Отвязать</string>
    <string name="tg_you_havent_chats">У вас пока нет связанных чатов. Пригласите бота в канал/группу и он появится в списке.</string>
    <string name="vk_you_havent_groups">Вы пока не являетесь редактором ни в одной группе. Создайте свою группу или попросите, чтобы вам выдали права редактора.</string>
    <string name="third_step_to_link_tg">3. Возвращайтесь в приложение для продолжения настройки</string>
    <string name="tg_posting_app_bot">\@posting_app_bot</string>
    <string name="second_step_to_link_tg">2. Перейдите в телеграм и отправьте код нашему боту</string>
    <string name="first_step_to_link_tg">1. Скопируйте код</string>
    <string name="telegram">Telegram</string>
    <string name="copy_icon">copy_icon</string>
    <string name="account_is_unlinked">Учетная запись не привязана :(</string>
    <string name="settings_btn">settings_btn</string>
    <string name="vk_settings_btn">vk_settings_btn</string>
    <string name="chat">Чат</string>
    <string name="feedback_about_app">Фидбэк по приложению</string>
    <string name="about_us">О нас</string>
    <string name="feedback">Фидбэк</string>
    <string name="feedback_description">Сейчас будет открыта ссылка, по которой вы сможете оставить свой фидбэк.</string>
    <string name="open">Открыть</string>
    <string name="cancel">Отмена</string>
</resources>