<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tv_title"

        style="@style/TextView"
        android:text="@string/choose_subsection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"/>
    <LinearLayout
        android:id="@+id/settings_items"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:divider="@drawable/settings_divider"
        android:showDividers="middle"
        >
        <LinearLayout
            android:id="@+id/item_social_media_settings"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/social_media_icon"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/social_media_settings"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            tools:ignore="UseCompoundDrawables"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/internet_icon"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/feedback_about_app"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_about"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/about_icon"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/about_app"
                android:textColor="?attr/colorOnBackground"
                android:textSize="18sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>